# all-in-one-rust

./: Cargo.toml  containers.json  schema.json
public/: automatic_reload.js  before-unload.js  disable-clamav.js  disable-collabora.js  disable-docker-socket-proxy.js  disable-fulltextsearch.js  disable-imaginary.js  disable-onlyoffice.js  disable-talk-recording.js  disable-talk.js  disable-whiteboard.js  forms.js  options-form-submit.js  style.css  timezone.js
src/: docker_client.rs  main.rs
src/auth/: auth_middleware.rs  controller.rs  mod.rs  password_generator.rs
src/configuration/: mod.rs  models.rs  read.rs  write.rs
src/container/: controller.rs  definition.rs  mod.rs  models.rs
src/cron/: backup_notification.rs  check_backup.rs  check_free_disk_space.rs  create_backup.rs  mod.rs  outdated_notification.rs  start_and_update_containers.rs  start_containers.rs  stop_containers.rs  update_mastercontainer.rs  update_notification.rs
src/data/: data_const.rs  mod.rs
src/routes/: api_auth.rs  api_configuration.rs  api_docker.rs  assets.rs  mod.rs  view.rs
templates/: already-installed.askama.html  containers.askama.html  error.askama.html  layout.askama.html  login.askama.html  setup.askama.html
templates/includes/: aio-config.askama.html  backup-dirs.askama.html
