[package]
name = "nextcloud_all_in_one"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard-stubs = { version = "1.44.0-rc.26.0.1", features = ["time"] }
#tokio = { version = "1.41.1", features = ["sync", "rt", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
rand = "0.8.5"
askama = "0.12.1"
hex = "0.4.3"
serde = { version = "1.0.215", features = ["derive"] }
axum = "0.7.9"
axum-typed-routing = "0.2.1"
serde_json = "1.0.132"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
time = "0.3.36"
tower-sessions = "0.13.0"

[features]
development = []
